<resources>
    <string name="app_name">3Pics2Tries</string>

    <string name="pref_theme_key" translatable="false">dark</string>
    <string name="display_pref">Display Preferences</string>
    <string name="theme_choice">Dark Theme</string>

    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="start">Start</string>
    <string name="help">How to play</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="exit">Exit</string>

    <string name="instructions">Instructions</string>
    <string name="instructions_content">This game is very similar to 4Pics1Word game. In this game you will be shown 10 questions. Question difficulty level increases as you progress in the game. For each question you will be shown 3 pictures and a blank field below it. You can type your answer in the given field and press check. You will be given 2 tries to guess the right answer as well as hints on the top each time you get the question wrong. Once the game is over you can see your score as well as an updated high score on the home page.</string>

    <string name="next_button">Next>></string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="question">Select the option below which describes the pictures best</string>
    <string name="game_score_string">Score: %1$d</string>
    <string name="high_score_string">High Score: %1$d</string>
    <string name="game_over">Game Over</string>
    <!--<string name="android_quiz">Android Quiz</string>-->

    <string name="download_error">Download Error</string>
    <string name="what_word_best_describes_the_images_below">What word best describes the images below?</string>

    <!-- HINTS -->
    <string name="hint1">Hint one</string>
    <string name="hint2">Hint two</string>
    <string name="hint3">Hint three</string>
    <string name="check">Check</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="home">home</string>

</resources>