<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/highScoreTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_50"
            android:layout_margin="5dp"
            android:layout_gravity="start"
            tools:text="High Score: 1"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/gameScoreTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_50"
            android:layout_margin="5dp"
            android:layout_gravity="end"
            tools:text="Score: 1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/questionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:padding="24dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/what_word_best_describes_the_images_below"
        tools:text="What word best describes the images below?" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="130dp"
            android:layout_height="232dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="-1dp"
            android:layout_marginEnd="17dp"
            android:layout_toStartOf="@+id/imageView1"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="118dp"
            android:layout_height="233dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="2dp"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
             />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="127dp"
            android:layout_height="233dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="-1dp"
            android:layout_marginEnd="164dp"
            android:layout_toStartOf="@+id/imageView1"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
             />

    </RelativeLayout>

    <EditText
        android:id="@+id/userTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/green_700"
        />

    <TextView
        android:id="@+id/answerTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/green_700"
        />


    <Button
        android:id="@+id/checkAnswerButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:padding="30dp"
        android:text="@string/check"
        android:textColor="@color/green_700"
        android:visibility="visible" />

    <Button
        android:id="@+id/nextButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:padding="30dp"
        android:text="@string/next_button"
        android:textColor="@color/green_700"
        android:visibility="invisible" />

    <Button
        android:id="@+id/gameOverButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/game_over"
        android:padding="30dp"
        android:layout_margin="20dp"
        android:textSize="30sp"
        android:textColor="@color/blue_50"
        android:visibility="invisible"
        style="?android:attr/borderlessButtonStyle"/>


</LinearLayout>